Fix vertical spacing in list mixins (#324)
* Fix vertical spacing in list mixins

* Remove unnecessary padding on list items

* Fix Drupal’s toolbar menu styles

--- a/source/_patterns/02-base/02-html-elements/22-list-item/_list-item.scss
+++ b/source/_patterns/02-base/02-html-elements/22-list-item/_list-item.scss
@@ -3,6 +3,8 @@
 
 li {
   @extend %usa-list-item;
+  @include vertical-spacing(rem(gesso-spacing(1)));
+  margin: 0;
 
   @media print {
     page-break-inside: avoid;
